项目初始化阶段，基础代码框架开发